updated resume section

--- a/examples/telecomsteve/resume.html
+++ b/examples/telecomsteve/resume.html
@@ -21,6 +21,13 @@
 
   <h3 class="resume_accent">Experience</h3>
 
+  <h4>telecomsteve</h4>
+  <p><i>Principal Engineer</i>, Remote, USA, 2024-2025</p>
+  <ul>
+    <li>Creator of Yoptio (https://yoptio.com).</li>
+    <li>Yoptio is a smart news reader with AI summaries, article narration, and headline filters.</li>
+  </ul>
+
   <h4>o1Labs</h4>
   <p><i>Lead Platform Engineer</i>, Remote, USA, 2021-2024</p>
   <ul>
@@ -64,7 +71,8 @@
 
   <h3 class="resume_accent">Open Source Contributions</h3>
     <ul>
-        <li>gnome-shell, 2020</li>
+        <li><a href="https://github.com/AztecProtocol/aztec-packages/pulls?q=is%3Apr+author%3Astevenplatt+is%3Aclosed">Aztec Protocol</a>, 2024</li>
+        <li><a href="https://github.com/MinaProtocol/mina/pulls?q=is%3Apr+is%3Aclosed+author%3Astevenplatt">Mina Protocol</a>, 2021-2024</li>
     </ul>
     <br>
 
@@ -76,7 +84,7 @@
   
     <h3 class="resume_accent">Education</h3>
     <ul>
-      <li>PhD. Information and Communications Technologies, Pompeu Fabra University, Barcelona, Spain, 2018-2021</li>
+      <li>PhD. Blockchain Technologies, Pompeu Fabra University, Barcelona, Spain, 2018-2021</li>
       <li>M.S. Wireless Communications, Barcelona School of Telecommunications and Engineering, Polytechnic University of Catalonia, Barcelona, Spain, 2017-2018</li>
       <li>MBA. Business Administration, Illinois State University, Normal, US, 2009-2012</li>
       <li>B.S. Electronic Systems Technology, Southern Illinois University at Carbondale, Carbondale, US, 2004-2007</li>
