updated portfolio and resume

--- a/examples/telecomsteve/index.html
+++ b/examples/telecomsteve/index.html
@@ -22,7 +22,7 @@
         <h1 class="about_header">Steven Platt, PhD</h1>
 
         <p>Hi, I'm Steven, but you can call me telecomsteve.</p>
-        <p>I am a staff platform engineer, specializing in blockchain and Web3.</p>
+        <p>I am a staff platform and devops engineer, specializing in Web3.</p>
         <div class="about_links">
             <a class="about_links" target="blank" href="https://www.linkedin.com/in/telecomsteve">LinkedIn</a>
             <a class="about_links" target="blank" href="https://github.com/stevenplatt">GitHub</a>
