--- a/examples/telecomsteve/portfolio.html
+++ b/examples/telecomsteve/portfolio.html
@@ -31,8 +31,8 @@
         <p><a target="blank" href="https://www.youtube.com/watch?v=lFzqYgF2MPQ">Watch Conference Talk</a></p>
         </div>
         <div class="portfolio-container_text">
-                <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/lFzqYgF2MPQ?si=MFq_YzaQvd2v99Xi&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
-            <img class="portfolio_image" src="./img/twilio_logo.webp" alt="Twilio">
+            <iframe class="portfolio_iframe" src="https://www.youtube.com/embed/lFzqYgF2MPQ?si=MFq_YzaQvd2v99Xi&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <!-- <img class="portfolio_image" src="./img/twilio_logo.webp" alt="Twilio"> -->
         </div>
     </div>
 
