--- a/examples/telecomsteve/portfolio.html
+++ b/examples/telecomsteve/portfolio.html
@@ -21,7 +21,7 @@
         <div class="portfolio-container_text">    
         <h3 class="portfolio_accent">SIP Trunking at Twitter</h3>
             
-        <p>During periods of early growth, Twitter deployed a number of isolated and non-standard phone systems that had become expensive and difficult to support.  
+        <p class="portfolio_hero">During periods of early growth, Twitter deployed a number of isolated and non-standard phone systems that had become expensive and difficult to support.  
             To manage the complexity, Twitter hired me to unify its networks and migrate them to cloud deployment.
 
             The result was fully virtualized VoIP infrastructure, combined with a Twilio Cloud SIP trunking. 
@@ -31,7 +31,25 @@
         <p><a target="blank" href="https://www.youtube.com/watch?v=lFzqYgF2MPQ">Watch Conference Talk</a></p>
         </div>
         <div class="portfolio-container_text">
-            <iframe class="portfolio_iframe" src="https://www.youtube.com/embed/lFzqYgF2MPQ?si=MFq_YzaQvd2v99Xi&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe 
+                style="
+                    max-width: 100%;
+                    width: 560px;
+                    height: 315px;
+                    border-radius: 15px; 
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    border: none;
+                "
+                src="https://www.youtube.com/embed/lFzqYgF2MPQ?si=MFq_YzaQvd2v99Xi&amp;controls=0" 
+                title="YouTube video player" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                referrerpolicy="strict-origin-when-cross-origin" 
+                allowfullscreen>
+            </iframe>
+            <!-- <iframe class="portfolio_iframe" src="https://www.youtube.com/embed/lFzqYgF2MPQ?si=MFq_YzaQvd2v99Xi&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
             <!-- <img class="portfolio_image" src="./img/twilio_logo.webp" alt="Twilio"> -->
         </div>
     </div>
