--- a/examples/telecomsteve/resume.html
+++ b/examples/telecomsteve/resume.html
@@ -23,8 +23,9 @@
   <h4>telecomsteve</h4>
   <p><i>Principal Engineer</i>, Remote, USA, 2024-2025</p>
   <ul>
-    <li>Creator of Yoptio (https://yoptio.com).</li>
-    <li>Yoptio is a smart news reader with AI summaries, article narration, and headline filters.</li>
+    <li>Creator of the Yoptio AI RSS Reader: <a href="https://yoptio.com" target="_blank">https://yoptio.com</a></li>
+    <li>Yoptio is a smart news reader with AI summaries, article narration, and daily summary podcasts.</li>
+    <li>Yoptio runs within Google Cloud and uses Google Vertex and Gemini AI to power it's AI features.</li>
   </ul>
 
   <h4>o1Labs</h4>
@@ -70,14 +71,14 @@
 
   <h3 class="resume_accent">Open Source Contributions</h3>
     <ul>
-        <li><a href="https://github.com/AztecProtocol/aztec-packages/pulls?q=is%3Apr+author%3Astevenplatt+is%3Aclosed">Aztec Protocol</a>, 2024</li>
-        <li><a href="https://github.com/MinaProtocol/mina/pulls?q=is%3Apr+is%3Aclosed+author%3Astevenplatt">Mina Protocol</a>, 2021-2024</li>
+        <li><a href="https://github.com/AztecProtocol/aztec-packages/pulls?q=is%3Apr+author%3Astevenplatt+is%3Aclosed" target="_blank">Aztec Protocol</a>, 2024</li>
+        <li><a href="https://github.com/MinaProtocol/mina/pulls?q=is%3Apr+is%3Aclosed+author%3Astevenplatt" target="_blank">Mina Protocol</a>, 2021-2024</li>
     </ul>
     <br>
 
     <h3 class="resume_accent">Technical Skills</h3>
     <ul>
-      <li>Python, Go, Rust, Linux, Kubernetes, Amazon Web Services (AWS), Google Cloud Platform (GCP)</li>
+      <li>DevOps, Artificial Intelligence (AI), Python, Go, Rust, Linux, Kubernetes, Docker, Continuous Integration and Delivery (CI/CD), Amazon Web Services (AWS), Google Cloud Platform (GCP)</li>
     </ul>
     <br>
   
