--- a/examples/telecomsteve/resume.html
+++ b/examples/telecomsteve/resume.html
@@ -25,7 +25,7 @@
   <ul>
     <li>Creator of the Yoptio AI RSS Reader: <a href="https://yoptio.com" target="_blank">https://yoptio.com</a></li>
     <li>Yoptio is a smart news reader with AI summaries, article narration, and daily summary podcasts.</li>
-    <li>Yoptio runs within Google Cloud and uses Google Vertex and Gemini AI to power it's AI features.</li>
+    <li>Yoptio runs within Google Cloud and uses Google Vertex and Gemini AI to power its AI features.</li>
   </ul>
 
   <h4>o1Labs</h4>
