--- a/examples/telecomsteve/portfolio.html
+++ b/examples/telecomsteve/portfolio.html
@@ -37,7 +37,7 @@
         <div class="portfolio-container_text">    
         <h3 class="portfolio_accent">SIP Trunking at Twitter</h3>
             
-        <p class="portfolio_hero">During periods of early growth, Twitter deployed a number of isolated and non-standard phone systems that had become expensive and difficult to support.  
+        <p>During periods of early growth, Twitter deployed a number of isolated and non-standard phone systems that had become expensive and difficult to support.  
             To manage the complexity, Twitter hired me to unify its networks and migrate them to cloud deployment.
 
             The result was fully virtualized VoIP infrastructure, combined with a Twilio Cloud SIP trunking. 
