--- a/examples/telecomsteve/sidenav.html
+++ b/examples/telecomsteve/sidenav.html
@@ -10,7 +10,7 @@
         <div class="navblock_text">
             <a href="./index.html">About</a>
             <a href="./resume.html">Resume</a>
-            <a href="./research.html">Research</a>
+            <a href="./publications.html">Publications</a>
             <a href="./portfolio.html">Portfolio</a>
         </div>
     </div>
