--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
 
   <h3 class="resume_accent">Education</h3>
   <ul>
-    <li>PhD. Information and Communications Technologies, Pompeu Fabra University, Barcelona, Spain, 2018-2021 (July)</li>
+    <li>PhD. Blockchain Technologies, Pompeu Fabra University, Barcelona, Spain, 2018-2021 (July)</li>
     <li>M.S. Wireless Communications, Barcelona School of Telecommunications and Engineering, Polytechnic University of Catalonia, Barcelona, Spain, 2017-2018</li>
     <li>MBA. Business Administration, Illinois State University, Normal, US, 2009-2012</li>
     <li>B.S. Electronic Systems Technology, Southern Illinois University at Carbondale, Carbondale, US, 2004-2007</li>
