updated resume wording

--- a/examples/telecomsteve/resume.html
+++ b/examples/telecomsteve/resume.html
@@ -24,7 +24,7 @@
   <p><i>Principal Engineer</i>, Remote, USA, 2024-2025</p>
   <ul>
     <li>Creator of the Yoptio AI RSS Reader: <a href="https://yoptio.com" target="_blank">https://yoptio.com</a></li>
-    <li>Yoptio is a smart news reader with AI summaries, article narration, and daily summary podcasts.</li>
+    <li>Features include AI summaries, article narration, and daily summary podcasts.</li>
     <li>Yoptio runs within Google Cloud and uses Google Vertex and Gemini AI to power its AI features.</li>
   </ul>
 
