updated discontinued label

--- a/examples/telecomsteve/publications.html
+++ b/examples/telecomsteve/publications.html
@@ -20,8 +20,8 @@
     <br>
 
   <h3 class="research_accent">Books</h3>
-  <h4>"Peer-to-Peer Web Applications"</h4>
-    <p><i>S Platt. Manning Publications Co. [Discontinued].</i></p>
+  <h4>"Peer-to-Peer Web Applications" - [Discontinued]</h4>
+    <p><i>S Platt. Manning Publications Co. 2024.</i></p>
     <p>Peer-to-Peer Web Applications takes you beyond toy examples and basic tutorials to build a complete peer-to-peer web app from start to finish. 
         Chapter-by-chapter, you’ll iterate and improve on “Code Radio”, a music streaming service that runs entirely on user’s machines. 
         As you go, you’ll learn how to create web client applications that connect directly to other clients without the need for a central server.
