additional encoding fix

--- a/examples/telecomsteve/publications.html
+++ b/examples/telecomsteve/publications.html
@@ -23,12 +23,12 @@
   <h4>"Peer-to-Peer Web Applications" - [Discontinued]</h4>
     <p><i>S Platt. Manning Publications Co. 2024.</i></p>
     <p>Peer-to-Peer Web Applications takes you beyond toy examples and basic tutorials to build a complete peer-to-peer web app from start to finish. 
-        Chapter-by-chapter, you'll iterate and improve on “Code Radio”, a music streaming service that runs entirely on user's machines. 
+        Chapter-by-chapter, you'll iterate and improve on "Code Radio", a music streaming service that runs entirely on user's machines. 
         As you go, you'll learn how to create web client applications that connect directly to other clients without the need for a central server.
         Add new features like client-side storage and compute, peer-to-peer connections, and use PublicKey and Zero-Knowledge cryptography to set up authentication and certify updates. 
         Once your app is built and upgraded, you'll begin to explore the blockchain. 
         You'll implement a payment feature using different blockchain offerings, comparing and contrasting their ecosystems and workflows. 
-        By the time you're done tinkering, your Code Radio app will be a complex, commercial grade application with a polished user experience—and absolutely no centralized server!</p>
+        By the time you're done tinkering, your Code Radio app will be a complex, commercial grade application with a polished user experience and absolutely no centralized server!</p>
     <p><a href="https://www.manning.com/books/peer-to-peer-web-applications-cx" target="_blank">Publisher Page</a></p>
     <br>
 
