--- a/examples/telecomsteve/resume.html
+++ b/examples/telecomsteve/resume.html
@@ -15,13 +15,13 @@
 
 <div class="main">
   <h2>Steven Platt, PhD</h2>
-  <p>Email: steven@telecomsteve.com, Miami, Florida, USA</p>
+  <p>Email: steven@telecomsteve.com, San Francisco, California, USA</p>
   <br>
 
   <h3 class="resume_accent">Experience</h3>
 
-  <h4>telecomsteve</h4>
-  <p><i>Principal Engineer</i>, Remote, USA, 2024-2025</p>
+  <h4>Yoptio</h4>
+  <p><i>Founder</i>, Remote, USA, 2024-2025</p>
   <ul>
     <li>Creator of the Yoptio AI RSS Reader: <a href="https://yoptio.com" target="_blank">https://yoptio.com</a></li>
     <li>Features include AI summaries, article narration, and feed summary podcasts.</li>
