--- a/examples/telecomsteve/index.html
+++ b/examples/telecomsteve/index.html
@@ -22,7 +22,7 @@
         <h1 class="about_header">Steven Platt, PhD</h1>
 
         <p>Hi, I'm Steven, but you can call me telecomsteve.</p>
-        <p>I am a staff devops engineer, and the creator of the Yoptio AI RSS Reader.</p>
+        <p>I am a staff platform engineer, and the creator of the Yoptio AI RSS Reader.</p>
         <div class="about_links">
             <a class="about_links" target="blank" href="https://www.linkedin.com/in/telecomsteve">LinkedIn</a>
             <a class="about_links" target="blank" href="https://github.com/stevenplatt">GitHub</a>
