portfolio and resume updated

--- a/examples/telecomsteve/resume.html
+++ b/examples/telecomsteve/resume.html
@@ -20,12 +20,16 @@
 
   <h3 class="resume_accent">Experience</h3>
 
-  <h4>Yoptio</h4>
-  <p><i>Founder</i>, Remote, USA, 2024-2025</p>
+  <h4>Stack Dyno</h4>
+  <p><i>Founder and Lead Engineer</i>, San Francisco, USA, 2024-2025</p>
   <ul>
-    <li>Creator of the Yoptio AI RSS Reader: <a href="https://yoptio.com" target="_blank">https://yoptio.com</a></li>
-    <li>Features include AI summaries, article narration, and feed summary podcasts.</li>
-    <li>Yoptio runs within Google Cloud and uses Google Vertex and Gemini AI to power its AI features.</li>
+    <li>Architected a platform to auto-generate Google Cloud architecture diagrams, providing DevOps teams
+        and SREs with an instant, accurate visualization of their infrastructure.</li>
+    <li>Designed and built the core scanning engine to securely connect to customer cloud accounts with
+        read-only IAM roles to automatically deduce and map resource relationships across projects and
+        regions.</li>
+    <li>Led all aspects of platform delivery—from frontend and backend engineering to DevOps
+        automation—leveraging Docker, Terraform, and Google Cloud Run.</li>
   </ul>
 
   <h4>o1Labs</h4>
