commenting out portfolio section

--- a/examples/telecomsteve/portfolio.html
+++ b/examples/telecomsteve/portfolio.html
@@ -17,7 +17,7 @@
   <h2>Platform Portfolio</h2>
   <p>A selection of my infrastructure and full-stack projects.</p>
 
-    <div class="portfolio-container">
+    <!-- <div class="portfolio-container">
         <div class="portfolio-container_text">        
             <h3 class="portfolio_accent">Stack Dyno</h3>
                 
@@ -31,7 +31,7 @@
         <div class="portfolio-container_text">
             <img class="portfolio_image" src="./img/stackdyno.png" alt="Stack Dyno Logo">
         </div>
-    </div>
+    </div> -->
   
     <div class="portfolio-container">
         <div class="portfolio-container_text">        
