--- a/examples/telecomsteve/resume.html
+++ b/examples/telecomsteve/resume.html
@@ -20,7 +20,7 @@
 
   <h3 class="resume_accent">Experience</h3>
 
-  <h4>Stack Dyno</h4>
+<!--   <h4>Stack Dyno</h4>
   <p><i>Founder and Lead Engineer</i>, San Francisco, USA, 2024-2025</p>
   <ul>
     <li>Architected a platform to auto-generate Google Cloud architecture diagrams, providing DevOps teams
@@ -30,7 +30,7 @@
         regions.</li>
     <li>Led all aspects of platform delivery—from frontend and backend engineering to DevOps
         automation—leveraging Docker, Terraform, and Google Cloud Run.</li>
-  </ul>
+  </ul> -->
 
   <h4>o1Labs</h4>
   <p><i>Lead Platform Engineer</i>, Remote, USA, 2021-2024</p>
